front_envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          access_log:
            - name: envoy.file_access_log
              config:
                path: "/mnt/log/envoy_access.log"
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: opera_delivery_boxes
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: opera_delivery_boxes
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: opera-envoy.admarvel.net
        port_value: 8080
admin:
  access_log_path: "/mnt/log/envoy_admin.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
